syntax = "proto3";
package tradingcore2pb;

enum ErrorCode {
    ERR_NOERR = 0;
    ERR_NOEXCHANGE = 1;
    ERR_NOTRAINPARAM = 2;
    ERR_NOASSETS = 3;
    ERR_INVALIDTOKEN = 4;
}

message BasicRequestData {
    string token = 1;
}

message BasicReplyData {
    ErrorCode errCode = 1;
}

enum TradeType { 
    TT_BUY = 0;
    TT_SELL = 1; 
}

message TradeData {
  TradeType tradeType = 1;
  string assetsName = 2;
  float money = 3;
  float volume = 4;
  float price = 5;
  float fee = 6;
  int64 ts = 7;
  float offMoney = 8;
};

message TrainSingleIndicator2Ex {
    string indicatorName = 1;
    int32 avgtimes = 2;
    float off0 = 3;
    float off1 = 4;
    float off2 = 5;
    float maxoff2 = 6;
    float minval = 7;
    float maxval = 8;
    float cv0 = 9;
    float cv0off = 10;
}

// TrainData - train data
message TrainData {
    int64 trainID = 1;
    string exchangeName = 2;
    string assetsName = 3;
    string strategyName = 4;
    string strParam = 5;
    string outputPath = 6;
    float invest = 7;
    float minValidReturn = 8;
    string market = 9;
    string symbol = 10;
    repeated string tags = 11;
    int64 tsStart = 12;
    int64 tsEnd = 13;

    oneof trainParam {
        TrainSingleIndicator2Ex si2 = 100;
    }
}

message TrainNodeResult {
    float maxDrawdown = 1;
    float sharpe = 2;
    float annualizedReturns = 3;
    float annualizedVolatility = 4;
    float totalReturns = 5;
    int32 tradingTimes = 6;
    int32 failTimes = 7;
    int32 stoplossTimes = 8;
    float winRate = 9;
    string name = 10;
    repeated TradeData history = 11;
}

// TrainResult - train result
message TrainResult {
    int64 trainID = 1;
    string exchangeName = 2;
    string assetsName = 3;
    string strategyName = 4;
    string strParam = 5;
    ErrorCode errCode = 6;
    repeated TrainNodeResult nodes = 7;
}

// RequestServerInfo - request server info
message RequestServerInfo {
    BasicRequestData basicRequest = 1;
}

message ReplyServerInfo {
    BasicReplyData basicReply = 1;
    int32 maxTasks = 2;
    int32 curTasks = 3;
}

message RequestTrain {
    BasicRequestData basicRequest = 1;
    TrainData train = 2;
}

message ReplyTrain {
    BasicReplyData basicReply = 1;
    TrainResult train = 2;
}

// TradingCore2Service - TradingCore2 service
service TradingCore2Service {
    // getServerInfo - get server infomation
    rpc getServerInfo(RequestServerInfo) returns (ReplyServerInfo) {}

    // train - train
    rpc train(RequestTrain) returns (ReplyTrain) {}
}